--- a/lib/jet-antd/lib/jet-antd.less
+++ b/lib/jet-antd/lib/jet-antd.less
@@ -231,12 +231,14 @@
     font-size: @header-font-size;
     font-weight: @header-weight;
     line-height: 35px;
+    margin: @spacing-md 0;
   }
   h2 {
     opacity: @half-opacity;
     font-weight: @subheader-weight;
     line-height: 21px;
     text-transform: uppercase;
+    margin: @spacing-sm 0;
   }
   h3,
   h4 {
@@ -253,10 +255,7 @@
     -ms-user-select: none;
     user-select: none;
     font-style: normal;
-
-    &:-webkit-any-link {
-      color: inherit;
-    }
+    color: inherit;
   }
   span {
     opacity: @subtle-opacity;
@@ -1417,7 +1416,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border-radius: @round-radius;
+    border-radius: @border-radius;
     box-shadow: @neu-shadow;
     padding: @spacing-sm @spacing-md;
     cursor: pointer;
@@ -1593,7 +1592,7 @@
     margin: @spacing-sm 0;
 
     &-content {
-      padding: @spacing-lg;
+      padding: @spacing-sm @spacing-lg;
       opacity: @subtle-opacity;
       height: unset;
       border-radius: @border-radius;
@@ -1628,16 +1627,18 @@
   // Antd Card
   .ant-card {
     width: 95%;
-    max-width: 250px;
-    padding: @spacing-lg;
+    max-width: 300px;
     border-radius: @border-radius;
     box-shadow: @neu-shadow;
     margin: @spacing-xs 0;
-    &.clickable {
+    overflow: hidden;
+    transition: box-shadow @transition-duration ease-in-out;
+    &.clickable, &-hoverable {
       cursor: pointer;
 
       &:hover {
         box-shadow: @neu-shadow-low;
+        transition: unset;
       }
       &:active {
         box-shadow: @neu-shadow-inset;
@@ -1649,15 +1650,20 @@
 
     // Optional cover image
     &-cover {
-      max-width: 300px;
+      width: 100%;
+      height: 150px;
 
       img {
         width: 100%;
+        height: 100%;
+        object-fit: cover;
       }
     }
     // Card heading, w/optional extra element(s)
     &-head {
       position: relative;
+      padding: @spacing-lg;
+      padding-bottom: 0;
       margin-bottom: @spacing-md;
 
       &::before {
@@ -1674,7 +1680,7 @@
 
       &-wrapper {
         display: flex;
-        align-items: flex-start;
+        align-items: flex-end;
         justify-content: space-between;
         padding-bottom: @spacing-xs;
 
@@ -1701,8 +1707,9 @@
         position: relative;
         margin-right: @spacing-md;
         opacity: @disabled-opacity;
-        cursor: pointer;
         font-size: @sm-font-size;
+        cursor: pointer;
+        transition: all @transition-duration ease-in-out;
 
         &::before {
           content: '';
@@ -1712,15 +1719,13 @@
           width: 100%;
           height: 1px;
           border-radius: @round-radius;
-          background: @gradient;
+          background: @jet-green;
           opacity: 0;
         }
         &:hover,
         &.ant-tabs-tab-active {
           opacity: 1;
-          background-image: @gradient;
-          -webkit-background-clip: text;
-          -webkit-text-fill-color: transparent;
+          color: @jet-green
         }
         &.ant-tabs-tab-active::before {
           opacity: 1;
@@ -1729,7 +1734,21 @@
     }
     // Body content of card
     &-body {
-      padding: @spacing-xs 0;
+      padding: @spacing-sm @spacing-xl @spacing-md @spacing-xl;
+    }
+    // Small card
+    &-small {
+      p, span {
+        font-size: @sm-font-size;
+      }
+      &-head {
+        padding: @spacing-md;
+        padding-bottom: 0;
+      }
+      &-body {
+        padding: @spacing-md;
+        padding-top: @spacing-sm;
+      }
     }
   }
 
