fix flight logs devnet

--- a/lib/jet-antd/lib/jet-antd.less
+++ b/lib/jet-antd/lib/jet-antd.less
@@ -141,6 +141,9 @@
 /***************************
   General Jet UI Styles / Boilerplate
 ***************************/
+::-webkit-scrollbar {
+  display: none;
+}
 .jet-app {
   position: relative;
   margin: 0;
